--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-img {
-    max-width: 100%;
+img.recipe-image {
+    max-width: 480px;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
     height: auto;
 }
