--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,13 @@ img.recipe-image {
     aspect-ratio: 1 / 1;
     object-fit: cover;
     height: auto;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.5;
+    color: #333;
+    background-color: #f0f0f051;
 }
